[package]
name = "mealoxy"
version = "0.1.0"
edition = "2021"
authors = ["Florian-David Lange"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.1"
itertools = "0.12.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
